<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Android Demos</string>
    <string name="page_app_component">App Components</string>
    <string name="page_bond_service">Bound service</string>
    <string name="page_bond_service_Binder">Bound service - Binder</string>
    <string name="page_bond_service_Messenger">Bound service - Messenger</string>
    <string name="page_bond_service_aidl">Bound service - AIDL</string>
    <string name="page_normal_broadcast">Normal broadcast</string>
    <string name="page_content_provider">Content Provider</string>
    <string name="page_content_provider_gallery">Content Provider - Gallery</string>
    <string name="page_content_provider_system_Contact">Content Provider - System Contact</string>
    <string name="test_service_StartService">StartService</string>
    <string name="page_activity">Activity</string>
    <string name="page_activity_save_and_restore_state">Saving and restoring transient UI state</string>
    <string name="page_activity_ExpandableListActivity">ExpandableListActivity</string>
    <string name="page_LauncherActivity">LauncherActivity</string>
    <string name="page_activity_start_and_finish">Start Activity and Finish Activity</string>
    <string name="page_LaunchMode">LaunchMode</string>
    <string name="page_Intent_and_Intent_Filter_Component">Intent and Intent-Filter - Component:\nUse Component start application 组件</string>
    <string name="page_Intent_and_Intent_Filter_action_and_category">Intent and Intent-Filter - action and category</string>
    <string name="page_intent_Filter_system_action">Intent-Filter - system action</string>
    <string name="page_intent_Filter_data_and_type">Intent-Filter - Data, and Type</string>
    <string name="page_intent_Flag">Intent-Flag</string>
    <string name="page_manage_system_ui">Manage System UI</string>
    <string name="page_Fragment">Fragment</string>
    <string name="page_BottomSheetDialogFragment">BottomSheetDialogFragment</string>
    <string name="page_BottomSheetDialogFragment_mock_app_crash">BottomSheetDialogFragment-Mock App Crash</string>
    <string name="page_half_width_DialogFragment">Half width DialogFragment</string>
    <string name="page_DialogFragment">DialogFragment</string>
    <string name="page_Base_DialogFragment">Base DialogFragment</string>
    <string name="page_Preference">Preference</string>
    <string name="page_sms_group_send_sms">短信群发</string>
    <string name="page_data_storage">Data Storage</string>
    <string name="page_internal_storage">internal storage</string>
    <string name="page_shared_preferences">SharedPreferences</string>
    <string name="page_sqlite">Sqlite</string>
    <string name="page_io">IO</string>
    <string name="page_io_zip">IO-Zip</string>
    <string name="page_sqlitedatabase">SQLiteDatabase</string>
    <string name="page_resource">Resource</string>
    <string name="page_Libs">Libs</string>
    <string name="page_Feature">Feature</string>
    <string name="page_dimension">Dimension</string>
    <string name="page_XML">XML</string>
    <string name="page_material">原始资源</string>
    <string name="page_String_and_Integer_and_Array">String, Integer, and Array</string>
    <string name="page_Color">Color</string>
    <string name="page_ColorStateList">Color-Color State List</string>
    <string name="page_ColorFilter">ColorFilter</string>
    <string name="page_Drawable">Drawable</string>
    <string name="page_StateDrawable">StateDrawable</string>
    <string name="page_VectorDrawable">VectorDrawable</string>
    <string name="page_AnimatedVectorDrawable">AnimatedVectorDrawable</string>
    <string name="page_ShapeDrawable">ShapeDrawable</string>
    <string name="page_LevelListDrawable">LevelList Drawable</string>
    <string name="page_LayerListDrawable">LayerList Drawable</string>
    <string name="page_ClipDrawable">Clip Drawable</string>
    <string name="page_DrawableFolder">Drawable Folder</string>
    <string name="page_ColorDrawable">ColorDrawable</string>
    <string name="page_BitmapDrawable">BitmapDrawable</string>
    <string name="page_NinePatchDrawable">NinePatchDrawable</string>
    <string name="page_InsetDrawable">InsetDrawable</string>
    <string name="page_ScaleDrawable">ScaleDrawable</string>
    <string name="page_RotateDrawable">RotateDrawable</string>
    <string name="page_decode_sampled_bitmap">Decode sampled bitmap</string>
    <string name="page_theme_choose">Theme Choose</string>
    <string name="page_theme_and_style">Theme and Style</string>
    <string name="page_theme_attr">Theme - Attr</string>
    <string name="page_theme_DeclareStyleable">Theme - DeclareStyleable for Custom View</string>
    <string name="page_theme_ColorFilter">Theme - ColorFilter</string>
    <string name="page_tint">Tint</string>
    <string name="page_TileMode">TileMode</string>
    <string name="page_bitmap_4_screen_density_and_drawable_memory">Bitmap - Screen density and drawable memory</string>
    <string name="page_bitmap_4_managing_bitmap_memory">Managing Bitmap Memory</string>
    <string name="page_bitmap_three_level_cache">Bitmap three level cache</string>
    <string name="page_bitmap">Bitmap</string>
    <string name="page_create_bitmap">createBitmap</string>
    <string name="page_bitmap_viewer">Bitmap 之 图片查看器</string>
    <string name="page_Tween_Animation">Tween animation</string>
    <string name="page_Frame_Animation">Frame animation</string>
    <string name="page_Property_Animation">Property animation</string>
    <string name="page_object_animation">Property animation - Object animation</string>
    <string name="page_value_animation">Property animation - Value animation</string>
    <string name="page_Animation_when_activity_enter_exit"> Animation When activity enter/exit</string>
    <string name="page_activity_transitions_animation"> Start an activity using an animation</string>
    <string name="page_font">Font</string>
    <string name="page_widget">Widget</string>
    <string name="page_RelativeView">RelativeView</string>
    <string name="page_view_location">View location</string>
    <string name="page_ViewFlipper">ViewFlipper</string>
    <string name="page_AdapterViewFlipper">AdapterViewFlipper</string>
    <string name="page_AdapterViewFlipper_custom">Custom AdapterViewFlipper</string>
    <string name="page_CustomView">Custom View</string>
    <string name="page_Canvas_and_Paint" tools:ignore="ExtraTranslation">Canvas and Paint</string>
    <string name="page_CascadeLayout">CascadeLayout</string>
    <string name="page_Shadow_and_ShadowLayer">Shadow and ShadowLayer</string>
    <string name="page_drawing_board">采用双缓冲实现画图板</string>
    <string name="page_FingerMovedBall">小球跟着手指动</string>
    <string name="page_Matrix_on_bitmap">Matrix 处理Bitmap对象</string>
    <string name="page_BitmapMesh">Bitmap Mesh</string>
    <string name="page_Shader">Shader</string>
    <string name="page_Layer">Layer(图层)</string>
    <string name="page_Xfermode">Xfermode</string>
    <string name="page_PathEffect">PathEffect</string>
    <string name="page_drawText">drawText</string>
    <string name="page_red_badge">Red Badge</string>
    <string name="page_ConstraintLayout">ConstraintLayout</string>
    <string name="page_linearLayout">LinearLayout</string>
    <string name="page_LinearLayout_CanNotChangeColor">LinearLayout can not change color</string>
    <string name="page_linearLayout_LayoutGravityAndGravity">LinearLayout - LayoutGravity And Gravity</string>
    <string name="page_ViewGroup">ViewGroup</string>
    <string name="page_FrameLayout">FrameLayout</string>
    <string name="page_Button">Button</string>
    <string name="page_ImageButton">Image Button</string>
    <string name="page_TextView">TextView</string>
    <string name="page_TextView_4_highlight_digital_clock">TextView - Highlight Digital Clock</string>
    <string name="page_TextView_4_drawable">TextView - Drawable</string>
    <string name="page_TextView_4_link_in_text">TextView - Link in Text</string>
    <string name="page_SeekBar">SeekBar</string>
    <string name="page_RatingBar">SeekBar</string>
    <string name="page_Progressbar">ProgressBar</string>
    <string name="page_ken_burns_image">Ken Burns Image</string>
    <string name="page_get_view_size_in_activity_oncreate">get View width and height in onCreate()</string>
    <string name="page_videoview_rotate_screen_tip">Video view rotate screen tip </string>
    <string name="page_imageView">ImageView</string>
    <string name="page_imageView_scaleType">ImageView scaleType</string>
    <string name="page_recyclerView_4_drag_reorder_list">RecyclerView - drag and reorder list</string>
    <string name="page_ListView">ListView</string>
    <string name="page_spinner">Spinner</string>
    <string name="page_TabLayout">TabLayout</string>
    <string name="page_check_vector_rendering_time">Check vector rendering time</string>
    <string name="page_webView">WebView</string>
    <string name="page_app_chooser">Show an app chooser</string>
    <string name="page_CheckBox">CheckBox</string>
    <string name="page_RadioButton">RadioButton</string>
    <string name="page_Switch">Switch</string>
    <string name="page_ToggleButton">ToggleButton</string>
    <string name="page_layout_inflater">LayoutInflater</string>
    <string name="page_EditText">EditText</string>
    <string name="page_KeyboardView">KeyboardView</string>
    <string name="page_z_axis">Z=elevation+ translationZ</string>
    <string name="page_TextClock">TextClock</string>
    <string name="page_SnackBar">Snackbar</string>
    <string name="page_qa_about_view">QA about view</string>
    <string name="page_faq_penetrate_click">FAQ - 点击穿透</string>
    <string name="page_faq_player_controller_layer">FAQ - Video Player - 控制层</string>
    <string name="page_security">Security</string>
    <string name="page_Exoplayer2">Exoplayer2</string>
    <string name="page_OkHttp">OkHttp</string>
    <string name="page_background_tasks">Background tasks</string>
    <string name="page_threadPoolExecutor">ThreadPoolExecutor</string>
    <string name="page_AsyncTask">AsyncTask</string>
    <string name="page_use_Concurrent_to_replace_AsyncTask">Use Concurrent to Replace AsyncTask</string>
    <string name="page_use_Coroutine_to_replace_AsyncTask">Use Coroutine to Replace AsyncTask</string>
    <string name="page_use_RxJava_to_replace_AsyncTask">Use RxJava to Replace AsyncTask (TBD)</string>
    <string name="page_use_Thread_to_replace_AsyncTask">Use Thread to Replace AsyncTask (TBD)</string>
    <string name="page_OtherUI">Other UI</string>
    <string name="page_Notification">Notification</string>
    <string name="page_Toast">Toast</string>
    <string name="page_ActionBar">ActionBar</string>
    <string name="page_ActionBar_ShowMenu">ActionBar - Show Menu</string>
    <string name="page_ActionBar_Navigation">ActionBar Navigation</string>
    <string name="page_BottomNavigationView">BottomNavigationView</string>
    <string name="page_ViewPager_PagerTitleStrip">ViewPager +PagerTitleStrip = Swipe Page Tab</string>
    <string name="page_PopupWindow">PopupWindow</string>
    <string name="page_Dialog">Dialog</string>
    <string name="page_J2v8">j2v8 (R8 wrappered)</string>
    <string name="page_WorkManager">WorkManager</string>
    <string name="insert_dict">添加单词</string>
    <string name="query">Query</string>
    <string name="start">Start</string>
    <string name="request_notification_permission">Request notification permission</string>
    <string name="jump">Jump</string>
    <string name="stop">Stop</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="off_long">This is long long Off</string>
    <string name="on_long">This is long long On</string>
    <string name="layout_main">Layout main</string>
    <string name="layout_1">Layout 1</string>
    <string name="layout_2">Layout 2</string>
</resources>