<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/topic"
        style="@style/topic"
        android:text="@string/page_CustomView" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/size_topic">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/page_Canvas_and_Paint"
                style="@style/btn"
                android:text="@string/page_Canvas_and_Paint" />

            <Button
                android:id="@+id/page_PathEffect"
                style="@style/btn"
                android:text="@string/page_PathEffect" />

            <Button
                android:id="@+id/page_DrawingBoard"
                style="@style/btn"
                android:text="@string/page_drawing_board" />

            <Button
                android:id="@+id/page_FingerMovedBall"
                style="@style/btn"
                android:text="@string/page_FingerMovedBall" />

            <Button
                android:id="@+id/page_MatrixOnBitmap"
                style="@style/btn"
                android:text="@string/page_Matrix_on_bitmap" />

            <Button
                android:id="@+id/page_BitmapMesh"
                style="@style/btn"
                android:text="@string/page_BitmapMesh" />

            <Button
                android:id="@+id/page_Shader"
                style="@style/btn"
                android:text="@string/page_Shader" />

            <Button
                android:id="@+id/page_CascadeLayout"
                style="@style/btn"
                android:text="@string/page_CascadeLayout" />

            <Button
                android:id="@+id/page_Shadow_and_ShadowLayer"
                style="@style/btn"
                android:text="@string/page_Shadow_and_ShadowLayer" />

            <Button
                android:id="@+id/page_Layer"
                style="@style/btn"
                android:text="@string/page_Layer" />

            <Button
                android:id="@+id/page_Xfermode"
                style="@style/btn"
                android:text="@string/page_Xfermode" />

            <com.hades.example.android.widget.custom_view.RequiredTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="RequiredTextView" />

        </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/fragmentRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</FrameLayout>