<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/topic"
        style="@style/topic"
        android:text="@string/page_resource" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/size_topic">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/pageMaterial"
                style="@style/btn"
                android:text="@string/page_material" />

            <Button
                android:id="@+id/pageDimension"
                style="@style/btn"
                android:text="@string/page_dimension" />

            <Button
                android:id="@+id/pageColor"
                style="@style/btn"
                android:text="@string/page_Color" />

            <Button
                android:id="@+id/pageColorStateListResource"
                style="@style/btn"
                android:text="@string/page_ColorStateList" />

            <Button
                android:id="@+id/pageThemeChoose"
                style="@style/btn"
                android:text="@string/page_theme_choose" />

            <Button
                android:id="@+id/pageInternationalization"
                style="@style/btn"
                android:text="国际化" />

            <Button
                android:id="@+id/pageStringIntegerArray"
                style="@style/btn"
                android:text="@string/page_String_and_Integer_and_Array" />

            <Button
                android:id="@+id/pageFont"
                style="@style/btn"
                android:text="@string/page_font" />

            <Button
                android:id="@+id/pageXML"
                style="@style/btn"
                android:text="@string/page_XML" />

            <View style="@style/div" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Support different screens" />

            <Button
                android:id="@+id/pageScreenOrientation"
                style="@style/btn"
                android:text="屏幕方向" />

            <Button
                android:id="@+id/pageScreenSize"
                style="@style/btn"
                android:text="屏幕尺寸" />

            <View style="@style/div" />

            <Button
                android:id="@+id/pageTweenAnimation"
                style="@style/btn"
                android:text="@string/page_Tween_Animation" />

            <Button
                android:id="@+id/pageFrameAnimation"
                style="@style/btn"
                android:text="@string/page_Frame_Animation" />

            <Button
                android:id="@+id/pagePropertyAnimation"
                style="@style/btn"
                android:text="@string/page_Property_Animation" />
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/fragmentRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</FrameLayout>