<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/subject"
        style="@style/topic"
        android:text="@string/test_service_StartService" />

    <Button
        android:id="@+id/request_notification_permission"
        style="@style/btn"
        android:layout_centerInParent="true"
        android:text="@string/request_notification_permission" />


    <Button
        android:id="@+id/start"
        style="@style/btn"
        android:layout_alignParentBottom="true"
        android:text="@string/start" />

    <Button
        android:id="@+id/jump"
        style="@style/btn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/jump" />

    <Button
        android:id="@+id/stopRecord"
        style="@style/btn"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/stop" />
</RelativeLayout>