<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/topic"
        style="@style/topic"
        android:text="@string/page_background_tasks" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/size_topic">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/pageThreadPoolExecutor"
                style="@style/btn"
                android:text="@string/page_threadPoolExecutor" />

            <Button
                android:id="@+id/pageAsyncTask"
                style="@style/btn"
                android:text="@string/page_AsyncTask" />

            <Button
                android:id="@+id/page_use_Concurrent_to_replace_AsyncTask"
                style="@style/btn"
                android:text="@string/page_use_Concurrent_to_replace_AsyncTask" />

            <Button
                android:id="@+id/page_use_Coroutine_to_replace_AsyncTask"
                style="@style/btn"
                android:text="@string/page_use_Coroutine_to_replace_AsyncTask" />

            <Button
                android:id="@+id/page_use_RxJava_to_replace_AsyncTask"
                style="@style/btn"
                android:text="@string/page_use_RxJava_to_replace_AsyncTask" />

            <Button
                android:id="@+id/page_use_Thread_to_replace_AsyncTask"
                style="@style/btn"
                android:text="@string/page_use_Thread_to_replace_AsyncTask" />
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/fragmentRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</FrameLayout>