<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:ignore="HardcodedText">

    <TextView
        style="@style/topic"
        android:text="Android About Test Code" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/pageSecurity"
                style="@style/btn"
                android:text="@string/page_security" />

            <Button
                android:id="@+id/page_background_tasks"
                style="@style/btn"
                android:text="@string/page_background_tasks" />

            <Button
                android:id="@+id/pageWidget"
                style="@style/btn"
                android:text="Widget" />

            <Button
                android:id="@+id/pageOtherUI"
                style="@style/btn"
                android:text="Other UI" />

            <Button
                android:id="@+id/pageDateStorage"
                style="@style/btn"
                android:text="@string/page_data_storage" />

            <Button
                android:id="@+id/pageResource"
                style="@style/btn"
                android:text="@string/page_resource" />

            <Button
                android:id="@+id/page_Libs"
                style="@style/btn"
                android:text="@string/page_Libs" />

            <Button
                android:id="@+id/page_Feature"
                style="@style/btn"
                android:text="@string/page_Feature" />

            <Button
                android:id="@+id/pageQAAboutView"
                style="@style/btn_red"
                android:text="@string/page_qa_about_view" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>