<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/topic"
        style="@style/topic"
        android:text="@string/page_bitmap" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/size_topic">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/page_Drawable_and_ScreenDensity"
                style="@style/btn"
                android:text="@string/page_bitmap_4_screen_density_and_drawable_memory" />

            <Button
                android:id="@+id/page_create_bitmap"
                style="@style/btn"
                android:text="@string/page_create_bitmap" />

            <Button
                android:id="@+id/page_BitmapViewer"
                style="@style/btn"
                android:text="@string/page_bitmap_viewer" />

            <Button
                android:id="@+id/page_LoadBitmapPo"
                style="@style/btn"
                android:text="@string/page_decode_sampled_bitmap" />

            <Button
                android:id="@+id/page_MemoryCacheBitmap"
                style="@style/btn"
                android:text="@string/page_bitmap_three_level_cache" />

        </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/fragmentRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</FrameLayout>