<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="@style/topic"
        android:text="@string/page_ToggleButton" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff=""
            android:textOn="" />

        <!--  更改icon的错误方式:icon会变形       -->
        <ToggleButton
            style="@style/toggle_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            android:textOff="@string/off"
            android:textOn="@string/on" />

        <!--  更改icon的错误方式:icon会变形       -->
        <ToggleButton
            android:id="@+id/switch2"
            style="@style/toggle_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            android:textOff="@string/off_long"
            android:textOn="@string/on_long" />
    </LinearLayout>
</RelativeLayout>