<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/topic"
        style="@style/topic"
        android:text="@string/page_Feature" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/page_J2v8"
                style="@style/btn"
                android:text="@string/page_J2v8" />

            <Button
                android:id="@+id/page_faq_penetrate_click"
                style="@style/btn"
                android:text="@string/page_faq_penetrate_click" />

            <Button
                android:id="@+id/page_faq_player_controller_layer"
                style="@style/btn"
                android:text="@string/page_faq_player_controller_layer" />

            <Button
                android:id="@+id/page_WorkManager"
                style="@style/btn"
                android:text="@string/page_WorkManager" />
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/fragmentRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>