<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/topic"
        style="@style/topic"
        android:text="@string/page_widget" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/size_topic">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/pageTextView"
                style="@style/btn"
                android:text="@string/page_TextView" />

            <Button
                android:id="@+id/page_HighlightDigitalClock"
                style="@style/btn"
                android:text="@string/page_TextView_4_highlight_digital_clock" />

            <Button
                android:id="@+id/page_link_in_text"
                style="@style/btn"
                android:text="@string/page_TextView_4_link_in_text" />
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/fragmentRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</FrameLayout>