<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        style="@style/topic"
        android:text="@string/layout_main" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonLayout1"
            style="@style/btn"
            android:onClick="buttonClick"
            android:text="@string/layout_1" />

        <Button
            android:id="@+id/buttonLayout2"
            style="@style/btn"
            android:onClick="buttonClick"
            android:text="@string/layout_2" />
    </LinearLayout>
</FrameLayout>