<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/topic"
        android:text="@string/page_content_provider" />

    <EditText
        android:id="@+id/word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Input word" />

    <Button
        android:id="@+id/insertBtnClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_dict" />

    <EditText
        android:id="@+id/key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_50"
        android:hint="Query word by ID" />

    <Button
        android:id="@+id/query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/query" />
</LinearLayout>